# trav_ai

./: .env.example  .gitignore  LICENSE  README.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  langgraph.json  main.py  pyproject.toml  test_prompt.py
app/: server.py
app/chatbot/: llm.py  middleware.py  tools.py
app/mem/: build_mem.py  thai_guide.mv2  thai_guide_v2.mv2
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  PDFViewer.tsx  SettingsModal.tsx  Sidebar.tsx
test/: debug_mem.py  test_agent.py  test_memvid.py  test_multi_session.py  test_security.py
