[project]
name = "travai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "memvid-sdk>=2.0.148",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
]
